--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 *.bak
 *.mc
 *.bin
+*.qpf
+*.qsf
+*.qws
+*.rpt
+NEScontroller/db/
+NEScontroller/incremental_db/
+NEScontroller/output_files/
+NEScontroller/simulation/
+NEScontroller/c5_pin_model_dump.txt
